--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
           <div class="mt-5 flex items-center gap-4 text-sm">
             <div class="w-44 font-semibold text-slate-600">Target DMS:</div>
-            <a href="#" class="text-blue-600 hover:underline font-semibold">SharePoint Connector</a>
+            <a href="#" class="text-blue-600 hover:underline font-semibold">OCI Document Storage</a>
             <span class="text-slate-500">(Default DMS Connector)</span>
           </div>
 
@@ -438,6 +438,7 @@
             </div>
             <button onclick="runDryRun()" class="h-10 rounded bg-slate-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-slate-700">Dry Run</button>
             <button class="h-10 rounded bg-slate-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-slate-700">Refresh</button>
+            <button class="h-10 rounded bg-slate-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-slate-700">Reset Quarantined Count</button>
           </div>
         </section>
 
@@ -492,27 +493,31 @@
                 </tr>
                 <tr id="processedRow" class="divide-x runtime-field">
                   <td class="px-4 py-3 font-semibold text-slate-700">Processed</td>
-                  <td class="px-4 py-3 text-slate-700">495 / 1100</td>
+                  <td id="processedValue" class="px-4 py-3 text-slate-700">495 / 1100</td>
                 </tr>
                 <tr id="batchRow" class="divide-x runtime-field">
                   <td class="px-4 py-3 font-semibold text-slate-700">Batch</td>
-                  <td class="px-4 py-3 text-slate-700">10 of 22</td>
+                  <td id="batchValue" class="px-4 py-3 text-slate-700">10 of 22</td>
                 </tr>
                 <tr id="successRow" class="divide-x runtime-field">
                   <td class="px-4 py-3 font-semibold text-slate-700">Success</td>
-                  <td class="px-4 py-3 text-emerald-700 font-semibold">490</td>
+                  <td id="successValue" class="px-4 py-3 text-emerald-700 font-semibold">490</td>
                 </tr>
                 <tr id="failedRow" class="divide-x runtime-field">
                   <td class="px-4 py-3 font-semibold text-slate-700">Failed</td>
-                  <td class="px-4 py-3 text-red-700 font-semibold">5</td>
+                  <td id="failedValue" class="px-4 py-3 text-red-700 font-semibold">5</td>
                 </tr>
                 <tr id="statusMessageRow" class="divide-x runtime-field">
                   <td class="px-4 py-3 font-semibold text-slate-700">Status Message</td>
-                  <td class="px-4 py-3 text-slate-700">Processing batch 10 of 22...</td>
+                  <td id="statusMessageValue" class="px-4 py-3 text-slate-700">Processing batch 10 of 22...</td>
                 </tr>
                 <tr id="startTimeRow" class="divide-x runtime-field">
                   <td class="px-4 py-3 font-semibold text-slate-700">Start Time</td>
                   <td class="px-4 py-3 text-slate-700">2026-02-02 10:30:00</td>
+                </tr>
+                <tr id="endTimeRow" class="divide-x runtime-field" style="display: none;">
+                  <td class="px-4 py-3 font-semibold text-slate-700">End Time</td>
+                  <td id="endTimeValue" class="px-4 py-3 text-slate-700"></td>
                 </tr>
                 <tr class="divide-x">
                   <td class="px-4 py-3 font-semibold text-slate-700">Initiated By</td>
