adding Quarantined documents fields to migration statuses

--- a/index.html
+++ b/index.html
@@ -483,6 +483,14 @@
                   <td class="px-4 py-3 font-semibold text-slate-700">Already Externalized</td>
                   <td class="px-4 py-3 text-slate-700">100</td>
                 </tr>
+                <tr id="quarantinedDocsRow" class="divide-x" style="display: none;">
+                  <td class="px-4 py-3 font-semibold text-slate-700">Quarantined Documents</td>
+                  <td id="quarantinedDocsValue" class="px-4 py-3 text-slate-700">25</td>
+                </tr>
+                <tr id="quarantinedToMigrateRow" class="divide-x runtime-field">
+                  <td class="px-4 py-3 font-semibold text-slate-700">Quarantined Documents to Migrate</td>
+                  <td id="quarantinedToMigrateValue" class="px-4 py-3 text-slate-700">25</td>
+                </tr>
                 <tr class="divide-x">
                   <td class="px-4 py-3 font-semibold text-slate-700">Total Size</td>
                   <td class="px-4 py-3 text-slate-700">2.5 GB</td>
