--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
     </div>
   </nav>
 
+  <!-- Sticky Banner Alert -->
+  <div id="bannerAlert" class="hidden sticky top-0 z-50 border-b px-4 py-3 flex items-center justify-center">
+    <div class="mx-auto max-w-[1700px] w-full flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <span id="bannerIcon" class="text-lg"></span>
+        <span id="bannerMessage" class="text-sm font-medium"></span>
+      </div>
+      <button onclick="hideBannerAlert()" class="text-current opacity-70 hover:opacity-100">
+        <svg class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"/></svg>
+      </button>
+    </div>
+  </div>
+
   <!-- Page -->
   <main class="mx-auto max-w-[1700px] px-4 py-6">
     <div class="bg-white border rounded-lg overflow-hidden">
@@ -154,7 +167,7 @@
           </div>
 
           <div class="mt-8 border-t pt-6">
-            <h3 class="text-sm font-semibold text-slate-800">Document Types</h3>
+            <h3 class="text font-semibold text-slate-800">Document Types</h3>
             <div class="mt-4 flex flex-wrap items-center gap-6">
               <div class="w-48 text-sm font-semibold text-slate-700">Document Types:</div>
               <label class="inline-flex items-center gap-2 text-sm">
@@ -169,7 +182,7 @@
           </div>
 
           <div class="mt-8 border-t pt-6">
-            <h3 class="text-sm font-semibold text-slate-800">Date Range Filter</h3>
+            <h3 class="text font-semibold text-slate-800">Date Range Filter</h3>
             <div class="mt-5 grid grid-cols-1 lg:grid-cols-2 gap-x-12 gap-y-5">
               <div class="flex items-center gap-4">
                 <label class="w-48 text-sm font-semibold text-slate-700">Date Field:</label>
@@ -193,8 +206,36 @@
             </div>
           </div>
 
+          <!-- Advanced Filtering Toggle -->
+          <div class="mt-6 border-t pt-6">
+            <button type="button" onclick="toggleAdvancedFiltering()" class="text-sm text-blue-600 hover:underline font-medium flex items-center gap-1">
+              <span id="advancedFilteringIcon">+</span> Advanced Filtering
+            </button>
+          </div>
+
+          <!-- Scheduling Section (hidden by default) -->
+          <div id="schedulingSection" class="mt-6" style="display: none;">
+            <h3 class="text font-semibold text-slate-800">Scheduling</h3>
+            <div class="mt-4 grid grid-cols-1 lg:grid-cols-2 gap-x-12 gap-y-5">
+              <div class="flex items-center gap-4">
+                <label class="w-48 text-sm font-semibold text-slate-700">Batch Size:</label>
+                <input type="number" min="5" max="100" value="100" class="h-10 w-72 rounded border border-slate-300 bg-white px-3 text-sm" />
+                <span class="text-xs text-slate-500">(5–100)</span>
+              </div>
+              <div class="flex items-center gap-4">
+                <label class="w-48 text-sm font-semibold text-slate-700">Interval (minutes):</label>
+                <input type="number" min="1" max="60" value="5" class="h-10 w-72 rounded border border-slate-300 bg-white px-3 text-sm" />
+                <span class="text-xs text-slate-500">(1–60)</span>
+              </div>
+              <div class="flex items-center gap-4">
+                <label class="w-48 text-sm font-semibold text-slate-700">Max Docs Per Interval:</label>
+                <input type="number" value="1000" class="h-10 w-72 rounded border border-slate-300 bg-white px-3 text-sm" />
+              </div>
+            </div>
+          </div>
+
           <div class="mt-8 border-t pt-6">
-            <h3 class="text-sm font-semibold text-slate-800">Object Types</h3>
+            <h3 class="text font-semibold text-slate-800">Object Types</h3>
             <p class="mt-2 text-sm text-slate-600">Select owning object types. Leave empty to include all.</p>
             <div class="mt-4 flex flex-wrap gap-6 text-sm">
               <label class="inline-flex items-center gap-2">
@@ -425,22 +466,42 @@
         <!-- Migration Actions -->
         <section>
           <div class="flex flex-wrap items-center gap-3">
-            <div class="relative">
-              <button onclick="toggleMigrationDropdown()" class="h-10 rounded bg-[#2b7da6] px-4 text-white text-sm font-semibold shadow-sm hover:bg-[#256e92] flex items-center gap-2">
-                Start Migration
-                <svg class="w-4 h-4" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"/></svg>
-              </button>
-              <div id="migrationDropdown" class="absolute left-0 bottom-full mb-1 w-40 rounded-md border bg-white shadow-lg z-10 hidden">
-                <button onclick="startMigration('success')" class="w-full px-4 py-2 text-left text-sm hover:bg-slate-100 text-emerald-700 font-medium">Success</button>
-                <button onclick="startMigration('running')" class="w-full px-4 py-2 text-left text-sm hover:bg-slate-100 text-blue-700 font-medium">Running</button>
-                <button onclick="startMigration('failed')" class="w-full px-4 py-2 text-left text-sm hover:bg-slate-100 text-red-700 font-medium">Failed</button>
-              </div>
-            </div>
-            <button onclick="runDryRun()" class="h-10 rounded bg-slate-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-slate-700">Dry Run</button>
-            <button class="h-10 rounded bg-slate-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-slate-700">Refresh</button>
+            <button id="btnStartMigration" onclick="showStartConfirmation()" class="h-10 rounded bg-[#2b7da6] px-4 text-white text-sm font-semibold shadow-sm hover:bg-[#256e92] disabled:opacity-50 disabled:cursor-not-allowed">Start Migration</button>
+            <button id="btnStopMigration" onclick="showStopConfirmation()" class="h-10 rounded bg-red-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-red-700 disabled:opacity-50 disabled:cursor-not-allowed" disabled>Stop Migration</button>
+            <button id="btnDryRun" onclick="runDryRun()" class="h-10 rounded bg-slate-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-slate-700 disabled:opacity-50 disabled:cursor-not-allowed">Dry Run</button>
+            <button onclick="refreshStatus()" class="h-10 rounded bg-slate-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-slate-700">Refresh</button>
             <button class="h-10 rounded bg-slate-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-slate-700">Reset Quarantined Count</button>
           </div>
+          
+          <!-- Job State Display -->
+          <div class="mt-3 text-sm text-slate-600">
+            Job State: <span id="jobStateDisplay" class="font-semibold text-slate-800">IDLE</span>
+          </div>
         </section>
+
+        <!-- Start Migration Confirmation Modal -->
+        <div id="startConfirmModal" class="fixed inset-0 bg-black/50 flex items-center justify-center z-50 hidden">
+          <div class="bg-white rounded-lg shadow-xl max-w-md w-full mx-4 p-6">
+            <h3 class="text-lg font-semibold text-slate-800">Confirm Start Migration</h3>
+            <p class="mt-3 text-sm text-slate-600">Start migration with current configuration?</p>
+            <div class="mt-6 flex justify-end gap-3">
+              <button onclick="hideStartConfirmation()" class="h-10 rounded border border-slate-300 bg-white px-4 text-slate-700 text-sm font-semibold shadow-sm hover:bg-slate-50">Cancel</button>
+              <button onclick="confirmStartMigration()" class="h-10 rounded bg-[#2b7da6] px-4 text-white text-sm font-semibold shadow-sm hover:bg-[#256e92]">Confirm</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Stop Migration Confirmation Modal -->
+        <div id="stopConfirmModal" class="fixed inset-0 bg-black/50 flex items-center justify-center z-50 hidden">
+          <div class="bg-white rounded-lg shadow-xl max-w-md w-full mx-4 p-6">
+            <h3 class="text-lg font-semibold text-slate-800">Confirm Stop Migration</h3>
+            <p class="mt-3 text-sm text-slate-600">Stop migration after current document completes?</p>
+            <div class="mt-6 flex justify-end gap-3">
+              <button onclick="hideStopConfirmation()" class="h-10 rounded border border-slate-300 bg-white px-4 text-slate-700 text-sm font-semibold shadow-sm hover:bg-slate-50">Cancel</button>
+              <button onclick="confirmStopMigration()" class="h-10 rounded bg-red-600 px-4 text-white text-sm font-semibold shadow-sm hover:bg-red-700">Confirm</button>
+            </div>
+          </div>
+        </div>
 
         <!-- Migration Status -->
         <section id="migrationStatus" class="mt-6" style="display: none;">
